# lab6_pqtool

./: .gitignore  CMakeLists.txt  README.md
include/pqtool/: file_utils.hpp  pq_crypto.hpp
samples/: demo_message.txt  demo_message_tampered.txt  message.txt  message_tampered.txt
scripts/: check_openssl_pqc.sh  run_windows_demo.sh
src/: file_utils.cpp  main.cpp  pq_crypto.cpp
